Float, create container, put two div side by side, image size

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,28 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome To </h1>
-    <h1><span class="name-highlight">Aushomapto</span> World</h1>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To </h1>
+            <h1><span class="name-highlight">Aushomapto</span> World</h1>
+            <h3>World Class Professional Web Dev</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum eveniet sunt asperiores nemo praesentium,
+                minus quibusdam atque provident quaerat quia voluptates omnis autem, voluptatum sequi iste aliquam
+                necessitatibus aperiam obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem suscipit
+                soluta distinctio voluptates est et quidem eum facere, quia, enim accusantium reiciendis, quo ipsam?
+                Deserunt molestiae ullam sed doloribus animi?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci eveniet assumenda, animi
+                necessitatibus accusamus perspiciatis sint accusantium nisi a beatae ea perferendis repellat
+                reprehenderit maxime impedit aliquid repudiandae dignissimos.
+            </p>
+        </div>
+        <div class="half-width">
+            <img src="images/profile.png" alt="Profile Photo">
+        </div>
+    </section>
+
 </body>
+
 </html>
