Link button, target blank, text-decoration, linear gradient

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 necessitatibus accusamus perspiciatis sint accusantium nisi a beatae ea perferendis repellat
                 reprehenderit maxime impedit aliquid repudiandae dignissimos.
             </p>
+            <a class="link-button" href="https://www.linkedin.com/in/prodip2416/" target="_blank">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="images/profile.png" alt="Profile Photo">
