dream area develop

--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
                 necessitatibus aperiam obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem suscipit
                 soluta distinctio voluptates est et quidem eum facere, quia, enim accusantium reiciendis, quo ipsam?
                 Deserunt molestiae ullam sed doloribus animi?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci eveniet assumenda, animi
-                necessitatibus accusamus perspiciatis sint accusantium nisi a beatae ea perferendis repellat
-                reprehenderit maxime impedit aliquid repudiandae dignissimos.
             </p>
             <a class="link-button" href="https://www.linkedin.com/in/prodip2416/" target="_blank">Hire Me</a>
         </div>
@@ -30,7 +27,17 @@
             <img src="images/profile.png" alt="Profile Photo">
         </div>
     </section>
-
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile3.png" alt="Profile 2 photo">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a Full Stack Web Developer</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam necessitatibus natus error nesciunt excepturi autem suscipit. Illum nesciunt, iste repellendus eius nobis nisi quisquam omnis ipsum quas corporis. Voluptatum, maxime.</p>
+            <a href="#" class="link-button">Download Resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
