--- a/index.html
+++ b/index.html
@@ -34,8 +34,26 @@
         <div class="half-width">
             <h2>Dream Big</h2>
             <h3>Become a Full Stack Web Developer</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam necessitatibus natus error nesciunt excepturi autem suscipit. Illum nesciunt, iste repellendus eius nobis nisi quisquam omnis ipsum quas corporis. Voluptatum, maxime.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam necessitatibus natus error nesciunt
+                excepturi autem suscipit. Illum nesciunt, iste repellendus eius nobis nisi quisquam omnis ipsum quas
+                corporis. Voluptatum, maxime.</p>
             <a href="#" class="link-button">Download Resume</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div class="half-width">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="name-highlight">2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div class="half-width">
+            <h2>Baby Web Developer</h2>
+            <h3 class="name-highlight">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+                it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
     </section>
 </body>
