BOX SHADOW, BORDER IMAGE, GRADIENT ANGLE, FOOTER

--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
             <h1>Welcome To </h1>
             <h1><span class="name-highlight">Aushomapto</span> World</h1>
             <h3>World Class Professional Web Dev</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum eveniet sunt asperiores nemo praesentium,
-                minus quibusdam atque provident quaerat quia voluptates omnis autem, voluptatum sequi iste aliquam
-                necessitatibus aperiam obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem suscipit
-                soluta distinctio voluptates est et quidem eum facere, quia, enim accusantium reiciendis, quo ipsam?
-                Deserunt molestiae ullam sed doloribus animi?
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.it
             </p>
             <a class="link-button" href="https://www.linkedin.com/in/prodip2416/" target="_blank">Hire Me</a>
         </div>
@@ -42,20 +38,23 @@
     </section>
     <section class="experience-area">
         <h2>Experiences</h2>
-        <div class="half-width">
+        <div id="first-experience" class="half-width single-espericence">
             <h2>Full Stack Web Developer</h2>
             <h3 class="name-highlight">2021-Present | Pro Level Developer</h3>
             <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                 efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
                 JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
-        <div class="half-width">
+        <div id="second-experience"  class="half-width single-espericence">
             <h2>Baby Web Developer</h2>
             <h3 class="name-highlight">2020-2021 | Programming Hero Learner</h3>
             <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
                 it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
     </section>
+    <footer>
+        <p>© Aushomapto 2021, All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
