--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <section class="top-banner-image">
+    <section class="top-banner-image padding">
         <div class="half-width">
             <h1>Welcome To </h1>
             <h1><span class="name-highlight">Aushomapto</span> World</h1>
             <h3>World Class Professional Web Dev</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.it
+            <p>Over 1-year of working experience as a software engineer, I’ve participated in all phases of the software development life cycle. I am familiar with technologies C#, ASP.NET, AJAX, CSS, HTML, JavaScript, MS SQL Server 2016. I am experienced in writing complex SQL queries, Stored Procedure, Function to fulfill various reporting requirements.Throughout my career, I’ve used version control repository service TFS.
             </p>
             <a class="link-button" href="https://www.linkedin.com/in/prodip2416/" target="_blank">Hire Me</a>
         </div>
@@ -23,20 +23,18 @@
             <img src="images/profile.png" alt="Profile Photo">
         </div>
     </section>
-    <section class="dream-area">
+    <section class="dream-area padding-100">
         <div class="half-width">
             <img src="images/profile3.png" alt="Profile 2 photo">
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
             <h3>Become a Full Stack Web Developer</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam necessitatibus natus error nesciunt
-                excepturi autem suscipit. Illum nesciunt, iste repellendus eius nobis nisi quisquam omnis ipsum quas
-                corporis. Voluptatum, maxime.</p>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
             <a href="#" class="link-button">Download Resume</a>
         </div>
     </section>
-    <section class="experience-area">
+    <section class="experience-area padding-100">
         <h2>Experiences</h2>
         <div id="first-experience" class="half-width single-espericence">
             <h2>Full Stack Web Developer</h2>
