--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>Dream Big</h2>
             <h3>Become a Full Stack Web Developer</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a href="#" class="link-button">Download Resume</a>
+            <a href="https://www.visualcv.com/app/cvs/5627958" class="link-button" target="_blank">Download Resume</a>
         </div>
     </section>
     <section class="experience-area padding-100">
